# Modern-CPP-2022

./: README.md
homework_1/task_1/: commands.sh
homework_1/task_2/: CMakeLists.txt  Makefile  README.md  build.sh
homework_2/task_1/: CMakeLists.txt
homework_2/task_1/src/: task_1.cpp
homework_2/task_2/: CMakeLists.txt
homework_2/task_2/src/: task_2.cpp
homework_3/: CMakeLists.txt
homework_3/.cache/clangd/index/: homework_3.cpp.383879FD18888314.idx  html_writer.cpp.378709345BDBB33A.idx  image_browser.cpp.9E6DC031D917DC33.idx
homework_3/api/: homework_3.h
homework_3/src/: homework_3.cpp  html_writer.cpp  image_browser.cpp
homework_3/tests/: CMakeLists.txt  example.html  test_html_writer.cpp  test_image_browser.cpp  trim.hpp
homework_3/web_app/: new.html  style.css  test_paulie.html
homework_4/: CMakeLists.txt  a.out
homework_4/.cache/clangd/index/: homework_4.h.F4CFEBCECF314D3C.idx  ipb_algorithm.hpp.31A4503208C15371.idx  main.cpp.463E9BE923EAC5F3.idx  named_vector.cpp.74A1948C340D5BB1.idx  named_vector.hpp.ADE4F214E6AC55F0.idx  test_ipb_algorithm.cpp.E3BE6B79F9349925.idx  test_named_vector.cpp.172264C515E22BD8.idx
homework_4/include/: homework_4.h  ipb_algorithm.hpp  named_vector.hpp
homework_4/tests/: CMakeLists.txt  test_ipb_algorithm.cpp  test_named_vector.cpp
homework_5/: CMakeLists.txt
homework_5/.cache/clangd/index/: convert_dataset.cpp.BF29AFEDDCF63C80.idx  convert_dataset.hpp.7AB94403DB145CFE.idx  homework_5.h.3C6CD7D548C47213.idx  main.cpp.EEDE6496189BB07F.idx  serialize.cpp.3226EADB3F56C810.idx  serialize.hpp.CA9294807DE35DCD.idx  test_convert_dataset.cpp.794C9F48D97CFBBE.idx  test_serialize.cpp.47EB38C8D41B444E.idx  utils.hpp.873FD79B876E8320.idx
homework_5/include/: convert_dataset.hpp  serialize.hpp
homework_5/src/: convert_dataset.cpp  main.cpp  serialize.cpp
homework_5/tests/: CMakeLists.txt  test_convert_dataset.cpp  test_serialize.cpp
homework_6/: CMakeLists.txt
homework_6/.cache/clangd/index/: homework_6.h.9078732917E3DF04.idx  image_class.cpp.FBFAED21EF027C6D.idx  image_class.hpp.3D0D352B3A755185.idx  io_tools.cpp.19363F97A98744D3.idx  io_tools.hpp.D07F2596901CCF63.idx  main.cpp.EE73CE31CFF0A3DD.idx  test_from_file.cpp.A06FB9239002C6A3.idx  test_histogram.cpp.C97E5A8843416EB4.idx  test_init.cpp.6006E170568F91CC.idx  test_resize.cpp.381C11FD67C73FD4.idx
homework_6/data/: downscaled.pgm  new_lena_ascii.pgm  upscaled.pgm
homework_6/include/: image_class.hpp  io_tools.hpp
homework_6/src/: CMakeLists.txt  image_class.cpp  io_tools.cpp  main.cpp  test.cpp
homework_6/tests/: CMakeLists.txt  test_from_file.cpp  test_histogram.cpp  test_init.cpp  test_resize.cpp
